# cow-types

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-to-pypi.yml
src/cow/: __init__.py  _cowmodule.c  cow_utils.c  cowdict.c  cowdict.h  cowlist.c  cowlist.h  cowset.c
src/cow_types/: __init__.py  cow_utils.c  cow_utils.h  cowdict.c  cowset.c  cowset.h
tests/: test_cowdict.py  test_cowlist.py  test_cowset.py
