[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cow"
version = "0.1.0"
description = "Copy-on-write alternatives to dict, set, and list"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pylint."messages control"]
disable = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]

[tool.ci]
python-versions = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
