[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cow-types"
version = "0.1.0"
description = "Copy-on-write alternatives to dict, set, and list"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pylint.main]
extension-pkg-allow-list = ["cow_types._cow"]

[tool.pylint."messages control"]
disable = ["missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
enable = ["cpython-prerelease"]

[tool.ci]
python-versions = ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
